Changelog for 1.4 Series
Released 2014-09-15

Changelog for 1.4.1
* Fixed bug 1205, copy does not copy roles (Chris T)
* Added multi-date inventory uploads (Erik H)
* Fixed bug 1207, date format not displated on preferences (Chris T)
* Fixed bug 1208, username does not appear on menu block (Chris T)

Chris T is Chris Travers
Erik H is Erik Huelsmann

Changelog for 1.4.0
General Enhancements:
* Performance enhancements on menu routines (Chris T and Steven M)
* Added +/- selection indicators to menu CSS (Chris T)
* Changing all auth calls to hit postgres db instead of template1 (Chris T)
* invoice.unit is now unbounded varchar to reduce errors (Chris T, 3516235)
* Invoices with inventory subject to draft/vouchers workflows (Chris T)
* Added Equity (Temp) account type, closed at year-end (Chris T)
* Added description field to transaction and invoice screens (Chris T)
* Removed ability to repost/delete transactions (Chris T)
* Partsgroups can now be nested though this is not yet used by LSMB (Chris T)
* Timecard system generalized to allow labor and materials cards too (Chris T)
* Can now print envelopes or shipping labels from many screens (Chris T)
* Can now select default formats for printed invoices (Chris T)
* Shipvia is now a text area. (Chris T)
* Descriptions can now be locked on invoices and orders (Chris T)
* Reconciliation reports can now be rejected (Chris T, 855)
* Added rounding tax module (Chris T, related to bug report 878)
* SQL files placed in sql/on_load/ now run on creation/upgrade of db (Chris T)

Enhancing Security Structure
* Session expiration now with configurable behavior (Chris T)
* Templates for user documents (like invoices) now stored in the db (Chris T)
* New Roles.sql file can be reloaded without prepocessing (Chris T)
* New Roles.sql file leaves no errors on success (Chris T)
* Removed public grants, using a base user instead (Chris T)

Enhancing data integrity
* No longer allow NULL amounts in acc_trans (Chris T)
